# GiSBDW

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build-pipeline.sh  install-hooks.sh  main.cu
.github/workflows/: cpplint-workflow.yaml  main-workflow.yaml  pull-request-workflow.yaml  push-workflow.yaml
CPU/: CMakeLists.txt  main.cpp
CPU/src/algorithm_result/: algorithm_result.hpp
CPU/src/binomial_coefficients/: binomial_coefficient.hpp
CPU/src/branch_and_bound/: branch_and_bound.cpp  branch_and_bound.hpp
CPU/src/dynamic_algorithm/: dynamic_algorithm.hpp
CPU/src/elimination_tree/: elimination_tree.cpp  elimination_tree.hpp
CPU/src/heuristics/: b_heuristic.hpp  highest_degree_heuristic.hpp
CPU/src/lower_bound/: basic_lower_bound.hpp
CPU/src/quasi_set/: quasi_set_array.hpp  quasi_set_base.hpp
CPU/src/set/: quasi_set_array.hpp  quasi_set_base.hpp  set_array.hpp  set_base.hpp  set_std.hpp
CPU/src/union_find/: array_union_find.hpp  union_find.hpp  union_find_impl.cpp  union_find_impl.cpp-2975f0ba  union_find_impl.hpp
CPU/test/: utils.hpp
CPU/test/branch_and_bound/: branch_and_bound_unittest.cpp
CPU/test/elimination_tree/: elimination_tree_unittest.cpp
CPU/test/heuristics/: highest_degree_heuristic_unittest.cpp
CPU/test/union_find/: array_union_find_unittest.cpp  union_find_impl_unittest.cpp
GPU/: CMakeLists.txt  main.cpp  main.cu
GPU/test/: sample_test.cpp
GPU/tests/: sample_test.cpp
Treedepth/: CMakeLists.txt  main.cpp
Treedepth/benchmark/: benchmark.cpp
Treedepth/benchmark/simple/: benchmark.cpp
Treedepth/common/utils/: graph_gen.hpp  utils.hpp
Treedepth/src/algorithm_result/: algorithm_result.hpp
Treedepth/src/binomial_coefficients/: binomial_coefficient.hpp
Treedepth/src/bnb_gpu/: bnb_gpu.cu  bnb_gpu.hpp
Treedepth/src/branch_and_bound/: branch_and_bound.cpp  branch_and_bound.hpp
Treedepth/src/branch_and_bound/heuristics/: bottom_up_heuristic.hpp  bottom_up_heuristic_gpu_algorithm.cu  bottom_up_heuristic_gpu_algorithm.hpp  highest_degree_heuristic.hpp  spanning_tree_heuristic.hpp  variance_heuristic.hpp
Treedepth/src/branch_and_bound/lower_bound/: basic_lower_bound.hpp  dynamic_gpu_lower_bound.hpp  edge_lower_bound.hpp
Treedepth/src/dynamic_algorithm/: dynamic_algorithm.hpp
Treedepth/src/dynamic_cpu/: dynamic_cpu.cpp  dynamic_cpu.hpp  dynamic_cpu_improv.cpp  dynamic_cpu_improv.hpp
Treedepth/src/dynamic_gpu/: dynamic_gpu.cu  dynamic_gpu.hpp
Treedepth/src/elimination_tree/: elimination_tree.cpp  elimination_tree.hpp
Treedepth/src/heuristics/: spanning_tree_heuristic.hpp  variance_heuristic.hpp
Treedepth/src/lower_bound/: basic_lower_bound.hpp  dynamic_gpu_lower_bound.hpp  edge_lower_bound.hpp
Treedepth/src/quasi_set/: quasi_set_array.hpp  quasi_set_base.hpp
Treedepth/src/set_encoder/: set_encoder.cu  set_encoder.hpp
Treedepth/src/statistics/: statistics.hpp
Treedepth/src/union_find/: array_union_find.hpp  ext_array_union_find.hpp
Treedepth/test/branch_and_bound/: branch_and_bound_unittest.cpp
Treedepth/test/correctness/: correctness_unittest.cpp
Treedepth/test/elimination_tree/: elimination_tree_unittest.cpp
Treedepth/test/heuristic_comparison/: heuristic_comparison.cpp
Treedepth/test/heuristics/: highest_degree_heuristic_unittest.cpp
Treedepth/test/set_encoder/: set_encoder_unittest.cpp
Treedepth/test/union_find/: array_union_find_unittest.cpp
Treedepth/test/utils/: graph_gen.hpp  utils.hpp
docs/introductory_documentation/: main.aux  main.tex  main.toc
docs/introductory_documentation/expected_results/: main.tex
docs/introductory_documentation/introduction/: main.tex
docs/introductory_documentation/modifications/: main.tex
docs/introductory_documentation/our_approach/: main.tex
docs/introductory_documentation/references/: main.tex
docs/introductory_documentation/typical_approaches/: main.tex
docs/theoretical_analysis/: main.tex
docs/theoretical_analysis/algorithms/: main.tex
hooks/: pre-commit
python-test/python-test/: .gitignore
python-test/python-test/python-test/: GraphGenerator.py  config.ini  config.json  displayer.py  generator.py  python_test.py  randomGraph.py  requirements.txt  runner.py  utils.py
python-test/python-test/python-test/benchmarkGraphs/: graph3.gviz
python-test/python-test/python-test/cliques/: clique00002  clique00003  clique00004  clique00006  clique00007  clique00008  clique00009  clique00010  clique00011  clique00012  clique00013  clique00014  clique00015  clique00016  clique00017  clique00018  clique00019  clique00020  clique00021  clique00022  clique00023  clique00024  clique00025  clique00026  clique00027  clique00028  clique00029  clique00030  clique00031  clique00032  clique00033  clique00034  clique00035  clique00036  clique00037  clique00038  clique00039
python-test/python-test/python-test/paths/: path00001  path00003  path00004  path00006  path00007  path00009  path00010  path00011  path00012  path00013  path00014  path00015  path00016  path00017  path00018  path00019  path00020  path00021  path00022  path00023  path00024  path00025  path00026  path00027  path00028  path00029  path00030  path00031  path00032  path00033  path00034  path00035  path00036  path00037  path00038  path00039
