cmake_minimum_required(VERSION 3.8)

project("TreeDepth" LANGUAGES CXX)
set(TEST_PROJECT_NAME "${PROJECT_NAME}Test")
set(BENCHMARK_PROJECT_NAME "${PROJECT_NAME}Benchmark")

file(GLOB_RECURSE PROJECT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*)
add_executable(${PROJECT_NAME} ${PROJECT_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
target_compile_definitions(${PROJECT_NAME} PRIVATE -DTD_CHECK_ARGS)

file(GLOB_RECURSE TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/test/*)
add_executable(${TEST_PROJECT_NAME} ${TEST_SOURCES} ${PROJECT_SOURCES})
set_property(TARGET ${TEST_PROJECT_NAME} PROPERTY CXX_STANDARD 17)
target_compile_definitions(${TEST_PROJECT_NAME} PRIVATE -DTD_CHECK_ARGS)
target_link_libraries(${TEST_PROJECT_NAME} gtest_main)
target_link_libraries(${TEST_PROJECT_NAME} gmock_main)
if(CMAKE_BUILD_TYPE MATCHES DEBUG)
    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND ${TEST_PROJECT_NAME})
endif(CMAKE_BUILD_TYPE MATCHES DEBUG)

file(GLOB_RECURSE BENCHMARK_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/benchmark/*)
add_executable(${BENCHMARK_PROJECT_NAME} ${BENCHMARK_SOURCES} ${PROJECT_SOURCES})
set_property(TARGET ${BENCHMARK_PROJECT_NAME} PROPERTY CXX_STANDARD 17)
target_compile_definitions(${BENCHMARK_PROJECT_NAME} PRIVATE -DTD_CHECK_ARGS)
target_link_libraries(${BENCHMARK_PROJECT_NAME} gtest_main)

find_program(CLANG_FORMAT_EXE NAMES "clang-format")
if(NOT CLANG_FORMAT_EXE)
  message(STATUS "clang-format not found. Consider isntalling it from https://llvm.org/builds/")
else()
  message(STATUS "clang-format found: ${CLANG_FORMAT_EXE}")
  add_custom_command(
  TARGET ${PROJECT_NAME}
  POST_BUILD
  COMMAND ${CLANG_FORMAT_EXE} -i -style=Chromium ${PROJECT_SOURCES} ${TEST_SOURCES} ${BENCHMARK_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  )
  add_custom_command(
  TARGET ${TEST_PROJECT_NAME}
  POST_BUILD
  COMMAND ${CLANG_FORMAT_EXE} -i -style=Chromium ${PROJECT_SOURCES} ${TEST_SOURCES} ${BENCHMARK_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  )
  add_custom_command(
  TARGET ${BENCHMARK_PROJECT_NAME}
  POST_BUILD
  COMMAND ${CLANG_FORMAT_EXE} -i -style=Chromium ${PROJECT_SOURCES} ${TEST_SOURCES} ${BENCHMARK_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  )
endif()
find_package(Boost REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})

if(DEFINED ENV{OVERRIDE_CUDA_DIR})
    set(CUDA_TOOLKIT_ROOT_DIR $ENV{OVERRIDE_CUDA_DIR})
    set(CMAKE_CUDA_COMPILER "${CUDA_TOOLKIT_ROOT_DIR}/bin/nvcc")
    if(WIN32)
        set(CMAKE_CUDA_COMPILER "${CMAKE_CUDA_COMPILER}.exe")
    endif()
endif()
find_package(CUDA 10.1)
if(CUDA_FOUND)
if(WIN32)
    set(CMAKE_CUDA_HOST_COMPILER cl.exe)
elseif(UNIX)
    set(CMAKE_CUDA_HOST_COMPILER g++-8)
endif()
set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(${TEST_PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(${BENCHMARK_PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set(CMAKE_CUDA_STANDARD 14)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)
set(CUDA_LINK_LIBRARIES_KEYWORD PUBLIC)
set(CUDA_PROPAGATE_HOST_FLAGS OFF)
enable_language(CUDA)
include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
target_compile_definitions(${PROJECT_NAME} PRIVATE -DCUDA_ENABLED)
target_compile_definitions(${TEST_PROJECT_NAME} PRIVATE -DCUDA_ENABLED)
target_compile_definitions(${BENCHMARK_PROJECT_NAME} PRIVATE -DCUDA_ENABLED)
endif()
